[package]
name = "ml-learning-demos"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.4" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.8.4" }
serde = { version = "1.0.215", features = ["derive"] }
csv = "1.3"
plotters = "0.3.7"
rand = "0.8.5"
thiserror = "1.0.69"
log = "0.4.26"
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.8.4" }
#ndarray="0.16.1"
#polars= { version = "0.46", features = ["full"] }
#half = "2.4.1"
#num-traits = "0.2.19"
