[package]
name = "ml-learning-demos"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.4" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.8.4" }
serde = { version = "1.0.215", features = ["derive"] }
csv = "1.3"
# version= "0.3.7"
plotters = { git = "https://github.com/plotters-rs/plotters.git", version = "0.3.7",default-features = true, features = ["plotters-bitmap"] }
rand = "0.8.5"
thiserror = "1.0.69"
log = "0.4.26"
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.8.4" }
candle-datasets = { git = "https://github.com/huggingface/candle.git", version = "0.8.4" }
hf-hub = { version = "0.4.2", features = ["tokio"] }
parquet = { version = "51.0.0" }
image = { version = "0.25.2", default-features = false, features = ["jpeg", "png", "tiff"] }
flate2={ version = "1.1.0"}
byteorder = { version = "1.5.0" }
futures = "0.3.31"
num_cpus = "1.16.0"
tokio = "1.44.1"
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.2.4", features = ["derive"] }

tiff = { git="https://github.com/image-rs/image-tiff.git", branch = "master"}
#gdal = { git="https://github.com/georust/gdal.git", tag="v0.18.0"}
gdal = { version="0.18.0", features = ["array"]}
geotiff = { git="https://github.com/georust/geotiff.git", branch = "main"}
serde_json = "1.0.140"
serde-pickle = { git="https://github.com/birkenfeld/serde-pickle.git", tag="v1.2.0" }
tiff2 = {git="https://github.com/feefladder/tiff2.git", branch = "dev"}
safetensors = {version = "0.5"}

# torch c++ api binding
#tch = { version="0.19.0"}

ndarray= { version="0.16.1", features = ["default"] }
ndarray-rand = { version = "0.15.0"}
rand_distr="0.4"
#polars= { version = "0.46", features = ["full"] }
#half = "2.4.1"
#num-traits = "0.2.19"
[[bin]]
name = "basics"
path = "src/bin/basics/iterator_demos.rs"

[[bin]]
name = "prithvi_geo"
path = "src/bin/prithvi/prithvi_geo_candle_demo.rs"

[[bin]]
name = "deep_learning"
path = "src/bin/deep_learning_demos/deep_learning.rs"
#[env]
#CARGO_PROFILE_DEV_BUILD_OVERRIDE_DEBUG=true
#PYTHONPATH="/usr/local/lib/python3.11/site-packages:{$PYTHONPATH}"
#LIBTORCH_USE_PYTORCH=1
#PATH="/usr/local/Cellar/python@3.11/3.11.11/bin/python3.11:{$PATH}"
#LIBTORCH="/usr/local/Cellar/pytorch/2.5.1_4/bin"
#LIBTORCH="/Users/dalan/tools/libtorch"
#LIBTORCH_INCLUDE="{$LIBTORCH}/include"
#LIBTORCH_LIB="{$LIBTORCH}/lib"
#PATH="{$PATH}:{$LIBTORCH}:{$LIBTORCH_INCLUDE}:{$LIBTORCH_LIB}:/usr/local/Cellar/pytorch/2.5.1_4/libexec/bin/python3.13"
#PYTHON_HOME="/opt/local/Library/Frameworks/Python.framework/Versions/3.11"
#PATH = "{$PYTHON_HOME}/bin:{$LIBTORCH_LIB}:{$LIBTORCH_INCLUDE}:{$LIBTORCH}/bin:{$PATH}"
#LIBTORCH_INCLUDE="/usr/local/lib/python3.11/site-packages/torch"
#LIBTORCH_LIB="/usr/local/lib/python3.11/site-packages/torch"